Fix service wrapper alignment in mobile navbar

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4525,7 +4525,11 @@ body.dark-theme #bascule-mode-button #bascule-theme:after {
   }
 
   #navbar #nav-content.active #services {
-    display: grid;
+    display: flex;
+    max-width: 100vw;
+    flex-wrap: wrap;
+    gap: 0 20px;
+    justify-content: center;
   }
 
   #navbar #nav-content ul#links {
@@ -4570,9 +4574,6 @@ body.dark-theme #bascule-mode-button #bascule-theme:after {
   }
 
   #navbar #nav-content #services {
-    grid-template-columns: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    gap: 2vh 0px;
     margin: max(2vh, 5vw);
   }
 
@@ -4587,10 +4588,6 @@ body.dark-theme #bascule-mode-button #bascule-theme:after {
 
   #navbar #nav-content #services a[target=_blank]:before {
     content: "";
-  }
-
-  #navbar #nav-content #services p {
-    font-size: max(2vh, min(5vw, 18px), 16px);
   }
 
   #navbar #hamburger-toggle {
